test/error/undeclared.ss
var g = x;
# -> type error
